fix update css so wizard submissions table doesn't get cut off

--- a/assets/stylesheets/wizard_custom_admin.scss
+++ b/assets/stylesheets/wizard_custom_admin.scss
@@ -195,15 +195,8 @@
   margin-top: 5px;
 }
 
-.admin-contents {
-  padding: 0 20px;
-}
-
-.wizard-submissions {
-  width: 100%;
-}
-
 .admin-contents .wizard-submissions {
+  width: 100%;
   display: inline-block;
   table {
     margin-top: 0;
